<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="240dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:text="@string/menuTitle"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black">
    </TextView>

    <ImageView
        android:id = "@+id/menuLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/menuTitle"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo">
    </ImageView>

    <Button
        android:id="@+id/newRoute"
        android:layout_marginTop="100dp"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:text="@string/newRoute"
        android:textAlignment="center"
        android:backgroundTint="@color/button"
        android:textColor="@color/buttonText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/routeHistory"
        android:layout_marginTop="210dp"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:text="@string/routeHistory"
        android:textAlignment="center"
        android:backgroundTint="@color/button"
        android:textColor="@color/buttonText"
        android:textSize="20sp"
        android:onClick="navigateRouteHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/favoriteRoutes"
        android:layout_marginTop="320dp"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:text="@string/favoriteRoutes"
        android:textAlignment="center"
        android:backgroundTint="@color/button"
        android:textColor="@color/buttonText"
        android:textSize="20sp"
        android:onClick="navigateFavoriteRoutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/achievements"
        android:layout_marginTop="430dp"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:text="@string/achievements"
        android:textAlignment="center"
        android:backgroundTint="@color/button"
        android:textColor="@color/buttonText"
        android:textSize="20sp"
        android:onClick="navigateAchievements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/help"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:text="@string/help"
        android:textAlignment="center"
        android:backgroundTint="@color/button"
        android:textColor="@color/buttonText"
        android:textSize="20sp"
        android:onClick="navigateHelp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/projectInfo"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:text="@string/projectInfo"
        android:textAlignment="center"
        android:backgroundTint="@color/button"
        android:textColor="@color/buttonText"
        android:textSize="12sp"
        android:onClick="navigateProjectInfo"
        app:layout_constraintStart_toEndOf="@id/help"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/logIn"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:text="@string/logIn"
        android:textAlignment="center"
        android:backgroundTint="@color/button"
        android:textColor="@color/buttonText"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/projectInfo"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/logOut"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:text="@string/logOut"
        android:textAlignment="center"
        android:backgroundTint="@color/button"
        android:textColor="@color/buttonText"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/projectInfo"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>