<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/return_icon"
        android:onClick="navigateMainMenu">
    </ImageButton>

    <TextView
        android:id="@+id/helpPageTitle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/helpPageTitle">
    </TextView>

    <TextView
        android:id="@+id/helpPageContent1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/helpPageContent1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/helpPageTitle" />

    <TextView
        android:id="@+id/helpPageContent2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/helpPageContent2"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/helpPageContent1" />

    <TextView
        android:id="@+id/helpPageContent3"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginTop="70dp"
        android:text="@string/helpPageContent3"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/helpPageContent2" />

</androidx.constraintlayout.widget.ConstraintLayout>